improving the room status space usage to avoid a horizontal scroll bar

--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -716,7 +716,7 @@ JamRoomViewPanel #labelName{
 }
 
 JamRoomViewPanel  #labelRoomStatus, JamRoomViewPanel  #labelRoomType{
-    font-size: 10px;
+    font-size: 9px;
     color: rgb(90, 90, 90);
 }
 JamRoomViewPanel  #labelRoomType{
